# cardiansClient

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  Findexternpro.cmake  Simple.cpp  Simple.h  availableGames.cpp  availableGames.h  baseBackground.cpp  baseBackground.h  button.cpp  button.h  clientInfo.cpp  clientInfo.h  heartsArea.cpp  heartsArea.h  imageInsert.cpp  imageInsert.h  lobby.cpp  lobby.h  login.cpp  login.h  main.cpp  mainMenu.cpp  mainMenu.h  newUser.cpp  newUser.h  playArea.cpp  playArea.h  playerCard.cpp  playerCard.h  sideMenu.cpp  sideMenu.h
source/GameLogic/: CMakeLists.txt  Card.cpp  Card.hpp  CrazyEightsGame.cpp  CrazyEightsGame.hpp  Game.cpp  Game.hpp  HeartsGame.cpp  HeartsGame.hpp  Player.cpp  Player.hpp
source/Messages/: CMakeLists.txt  GameMessage.hpp  LobbyGame.cpp  LobbyGame.hpp
source/Networking/: CMakeLists.txt  ClientNetworkInterface.cpp  ClientNetworkInterface.hpp  CrazyEightsOnline.cpp  CrazyEightsOnline.hpp  GeneralMessage.cpp  GeneralMessage.hpp  NetworkInterface.cpp  NetworkInterface.hpp  OnlineGame.cpp  OnlineGame.hpp  TCPConnection.cpp  TCPConnection.hpp  mockClient.cpp
source/OnlineGameLogic/: CMakeLists.txt  CrazyEightsOnline.cpp  CrazyEightsOnline.hpp  HeartsOnline.cpp  HeartsOnline.hpp  OnlineGame.cpp  OnlineGame.hpp
source/crazyEightsLogic/: CMakeLists.txt  Card.cpp  Card.hpp  Game.cpp  Game.hpp
